# python-workshop

./: .gitignore
doc/python/: Resources.md
soya/: pyproject.toml
soya/src/soya/: __init__.py
