[project]
name = "soya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wen Qun", email = "wenqun.soya@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
soya = "soya:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
